<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAppLog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="msg_about">AndroidAppLog: A tool to log method\'s parameters and return value.</string>
    <string name="msg_author">Developed By: MindMac</string>
    <string name="msg_email">Email: mindmac.hu@gmail.com</string>
    <string name="msg_risk">Use is entirely at your own risk.</string>
    <string name="msg_github">https://github.com/MindMac/AndroidAppLog</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="msg_enable_xposed">AndroidAppLog is not enabled by Xposed! Please ensure to install Xposed, enable AndroidAppLog and reboot your device! </string>

    <!-- Menu Information -->
    <string name="menu_json">Json Output</string>
    <string name="menu_default">Default Output</string>
    <string name="menu_all_apps">All Apps</string>
    <string name="menu_system_apps">Only System Apps</string>
    <string name="menu_user_apps">Only User Apps</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="menu_app_launch">Launch App</string>
    <string name="menu_check_all">Check All</string>
    <string name="menu_clear_all">Clear All</string>
    <string name="menu_app_info">App Information</string>
    
</resources>
